Archive2/4f/1b34535823fa97/output
main.cpp:1:10: error: ISO C++ forbids declaration of 'Setting' with no type [-fpermissive]
  Setting(){
          ^
main.cpp: In function 'int Setting()':
main.cpp:2:9: error: expected primary-expression before '...' token
      f1(...);
         ^
main.cpp:2:12: error: 'f1' was not declared in this scope
      f1(...);
            ^
main.cpp:3:12: error: expected primary-expression before '...' token
         f2(...);
            ^
main.cpp:3:15: error: 'f2' was not declared in this scope
         f2(...);
               ^
main.cpp:5:2: warning: no return statement in function returning non-void [-Wreturn-type]
  };
  ^
main.cpp: At global scope:
main.cpp:5:3: warning: extra ';' [-Wpedantic]
  };
   ^
